# observer-protocol-spec

./: .env.example  AIP-IMPLEMENTATION.md  AIP-SUMMARY.md  AIP-TYPE-REGISTRY.md  BUILD2-LOG.md  CHANGELOG.md  DELIVERABLES-BUILD2.md  DEPLOY-015.md  DEPLOYMENT-LOG.md  LICENSE  OWS-BUILD-1-LOG.md  README.md  REPO_MAP.md  SOLANA-BUILD-LOG.md  WHITEPAPER.md  aip_api.py  aip_core.py  aip_integration.py  aip_manager.py  api-server-v2.py  auto-restart.sh  crypto_verification.py  op-rebuild-spec.md  op-test-suite-spec.md  test_aip.py  test_spec_31_negative.py
.github/PULL_REQUEST_TEMPLATE/: type-registry-extension.md
api/: agent_profile_routes.py  api-server-v2.py  attestation_scoping.py  chain_adapter.py  crypto_verification.py  delegation_routes.py  demo_neuralbridge.py  demo_neuralbridge_did.json  did_document_builder.py  did_resolver.py  lightning_adapter.py  main.py  organization_models.py  organization_registry.py  partner_registry.py  remediation_routes.py  requirements.txt  stacks_adapter.py  trust_score.py  vac_extensions.py  vac_generator.py  vc_issuer.py  vc_verification.py  vc_verifier.py  verify_endpoints.py  vp_builder.py  vp_reconstructor.py  webhook_delivery.py
api/schemas/: lightning_payment_receipt.py
api/tests/: test_lightning_adapter.py
core/: observer-client.mjs
demo/: register_ows_demo_agent.py
demos/aiprox-op/: README.md  demo.py
demos/lightningprox-op/: README.md  demo.py
docs/: 4ACT-ORCHESTRATOR-STATUS.md  AIP_v0.5.md  API-QUICK-REF-4Act-Demo.md  BD-SUMMARY-4Act-Demo.md  OP-AT-BUILD-PRINCIPLES.md  RUNBOOK-Sam-4Act-TRON-Demo.md  Spec-3.1-Third-Party-Attestations-v0.2.md  TEMPLATE-tron-receipt-v1.json
docs/developer-guide/: README.md  sandbox.md
docs/roadmap/: policy-persistence.md
examples/: README.md  register_agent.py  verify_lightning.py
migrations/: 001_add_ows_support.py  003_add_aip_tables.sql  003_add_did_columns.sql  003_replace_partner_attestations_for_vc.py  004_add_vp_document_column.sql  005_drop_public_key_hash.sql  006_replace_vac_revocation_registry_for_status_lists.py  015_integrator_registry_and_settlement.py  017_neuralbridge_transactions.sql  020_solana_credentials.sql
rails/erc8004/: contracts.py
rails/solana/: README.md  solana_routes.py  solana_verify.py  test_solana_verify.py
rails/tron/: INTEGRATION-GUIDE.md  MAINNET-CUTOVER-SUMMARY.md  README.md  index.mjs  package-lock.json  package.json  test-tron-rail.mjs  tron-config.mjs  tron-core.mjs  (+3 more)
scripts/: 4act-demo-orchestrator.mjs  test_protocol_v1.py  verify_all_agents_have_dids.py
sdk/python/: README.md  pyproject.toml
sdk/python/observer_protocol/: __init__.py  client.py  models.py
sdk/python/observer_protocol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test-reports/: protocol-test-20260331-000222.json  protocol-test-20260331-000222.txt  protocol-test-20260331-000419.json  protocol-test-20260331-000419.txt  protocol-test-20260331-000512.json  protocol-test-20260331-000512.txt
website/: demo.html  quickstart.html  registry.html
(+14 files in other folders)
