[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observer-protocol"
version = "0.1.1"
description = "Python SDK for Observer Protocol — agent identity, verification, and trust scoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Observer Protocol", email = "dev@observerprotocol.org"},
]
keywords = ["observer-protocol", "agent", "did", "verifiable-credentials", "lightning", "bitcoin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://observerprotocol.org"
Documentation = "https://github.com/observer-protocol/observer-protocol-spec/tree/master/docs/developer-guide"
Repository = "https://github.com/observer-protocol/observer-protocol-spec"
Issues = "https://github.com/observer-protocol/observer-protocol-spec/issues"

[tool.setuptools.packages.find]
include = ["observer_protocol*"]
